--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -3,10 +3,12 @@
     position: sticky;
     top: 0;
     z-index: 5;
-    background-color: var(--color-secondary-bg);
+    background-color: var(--color-secondary-bg-opaque);
+    box-shadow: 0px 0px 10px 1px var(--color-tertiary);
     color: var(--color-text-primary);
     backdrop-filter: blur( 2px );
     -webkit-backdrop-filter: blur( 2px );
+    /* box-shadow: none; */
 }
 
 .nav-bar .active-link {
